<resources>
    <string name="app_name">Book Box</string>

    <string name="title_activity_interactive_map">InteractiveMap</string>

    <string name="title_activity_sign">SignActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_message">Welcome!\nPlease Sign in or Sign up\n to continue</string>
    <string name="NotRegistered">Not Registered Yet, Sign Up!</string>
    <string name="sign_in">Sign In</string>
    <string name="typePass">Type Your Password</string>
    <string name="typeEmail">Type your Email</string>
    <string name="pleaseFill">Please fill in the fields\n to Sign in</string>
    <string name="alreadyReg">Already Registered, Sign In!</string>
    <string name="staySigned">Stay Signed in</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send_link">send link</string>
    <string name="enter_email">Enter your email</string>
    <string name="reset_password_instructions">Enter your email and we\'ll send you a link to get back into your account.</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="menu">Menu</string>
    <string name="search_hint">Enter book box name</string>
    <string name="add_box_button_text">Add New Box</string>
    <string name="go_back_to_map_button_text">Go Back to Map</string>
    <string name="contact_us_report">Contact Us / Report</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="type_your_username">Type your username</string>
    <string name="map_button_text">Map</string>
    <string name="contact_support">Contact Support</string>

    <!-- Technical support -->
    <string name="name_hint2">Name</string>
    <string name="email_hint">Email</string>
    <string name="message_hint">Your message</string>
    <string name="submit">Submit</string>


    <!-- EditText hints -->
    <string name="name_hint">Book Box Name</string>
    <string name="location_hint">Location</string>
    <string name="description_hint">Description</string>
    <!-- Button texts -->
    <string name="upload_picture">Upload Picture</string>
    <string name="confirm_addition">Confirm Addition</string>
    <string name="book_box_image_description">Image of the book box</string>
    <string name="image_description">Description of the image</string>
    <string name="about_us_text">The Book Box is an application that helps book readers in finding books in an easy and cheap way.\n The application was done by the help of 9 Undergrad Students at the University of Dalhousie.</string>
    <string name="about_us">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="book_details_title">Title: %s</string>
    <string name="book_details_author">Author: %s</string>
    <string name="book_details_description">Description:\n%s</string>
    <string name="book_details_rating">Rating: %.1f/5</string>
    <string name="instructions">Enter search keyword and choose filters below:</string>
    <string name="search_books">Search Books</string>
    <string name="filter_by">Filter by:</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="enter_search_query">Enter search query…</string>
    <string name="search1">Search</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="membership_level">Membership Level: Bronze</string>
    <string name="edit_password">edit password</string>
    <string name="delete_account">delete account</string>
    <string name="logout">Logout</string>
    <string name="edit_username">edit username</string>
    <string name="password">Password</string>
    <string name="developer_appsnipp_com">developer@appsnipp.com</string>
    <string name="developer">Developer</string>
    <string name="profile_picture">profile picture</string>
    <string name="contact_support1">Contact Support</string>
    <string name="enable_location_services">Enable Location Services</string>
    <string name="enable">Enable</string>
    <string name="replyBack">Please submit your info and we will get back to you in 3–5 business days.</string>
    <string name="books_in_box">Books in Box</string>
    <string name="disclaimer">Note: Books may or may not be available</string>

</resources>