<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ProfileFragment">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="126dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/profile_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="124dp"
        android:layout_height="32dp"
        android:text="@string/developer"
        android:textAppearance="?attr/textAppearanceHeadline6"

        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
        app:layout_constraintEnd_toStartOf="@+id/btnEditUsername"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/developer_appsnipp_com"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="300dp"
        android:layout_height="22dp"
        android:text="@string/password"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/btnEditUsername"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="72dp"
        android:contentDescription="@string/edit_username"
        android:src="@drawable/editing"
        app:layout_constraintBottom_toBottomOf="@id/tvUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvUsername"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteAccount"
        app:layout_constraintEnd_toEndOf="@+id/btnDeleteAccount"
        app:layout_constraintStart_toStartOf="@+id/btnDeleteAccount"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintVertical_bias="0.961" />


    <Button
        android:id="@+id/btnDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/delete_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnEditPassword"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/edit_password"
        android:src="@drawable/editing"
        app:layout_constraintBottom_toBottomOf="@id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvPassword"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/membership_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/membership_level"
        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
        app:layout_constraintVertical_bias="0.158"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oldPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_password"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>